@startuml

title __LANSCAPE's Class Diagram__\n

  namespace  {
    namespace om.example.semesterexam {
      namespace lanscape {
        class com.example.semesterexam.lanscape.ConcreteWall {
            + ConcreteWall()
            + getDamage()
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.semesterexam {
      namespace lanscape {
        class com.example.semesterexam.lanscape.Gate {
            - look : AnimationTimer
            - nextStage : BooleanProperty
            - open : BooleanProperty
            + Gate()
            + canMoveStage()
            + die()
            + getDamage()
            + isOpen()
            + lock()
            + open()
            + setOpen()
            - getThis()
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.semesterexam {
      namespace lanscape {
        class com.example.semesterexam.lanscape.Grass {
            + point2D : Point2D
            ~ buffHP : Timeline
            ~ regenerate : Timeline
            + Grass()
            + die()
            + draw()
            + getDamage()
            + setBuffHP()
            + setPoint2D()
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.semesterexam {
      namespace lanscape {
        class com.example.semesterexam.lanscape.Lava {
            + Lava()
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.semesterexam {
      namespace lanscape {
        class com.example.semesterexam.lanscape.SoftWall {
            + SoftWall()
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.semesterexam {
      namespace lanscape {
        class com.example.semesterexam.lanscape.Stone {
            + Stone()
            + die()
            + getDamage()
        }
      }
    }
  }
  

  com.example.semesterexam.lanscape.ConcreteWall -up-|> com.example.semesterexam.core.Wall
  com.example.semesterexam.lanscape.Gate -up-|> com.example.semesterexam.lanscape.SoftWall
  com.example.semesterexam.lanscape.Grass -up-|> com.example.semesterexam.core.Subject
  com.example.semesterexam.lanscape.Lava -up-|> com.example.semesterexam.lanscape.Grass
  com.example.semesterexam.lanscape.SoftWall -up-|> com.example.semesterexam.core.Wall
  com.example.semesterexam.lanscape.Stone -up-|> com.example.semesterexam.lanscape.Grass


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
